[package]
name = "fetch-balance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
currency_rs = "1.1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version ="1.22", features = ["full"] }
