[package]
name = "fetch-balance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
currency_rs = { version = "1.1", default-features = false }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version ="1.22", features = ["full"] }

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
